tests/negative/borrowfield.voi
struct Point { x float }
struct Bad { p &Point }
